# docs/swagger.json
@@ -9,6 +9,26 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Retorna uma mensagem simples para indicar que o servidor está rodando",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Verifica o status da API",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.HealthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Cria um novo usuário na plataforma com nome, email e senha",
@@ -69,6 +89,15 @@
                 "error": {
                     "type": "string",
                     "example": "Erro ao validar os dados"
+                }
+            }
+        },
+        "models.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "ok"
                 }
             }
         },
