# internal/handlers/health.handler.go
@@ -6,6 +6,13 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// HealthCheck godoc
+// @Summary Verifica o status da API
+// @Description Retorna uma mensagem simples para indicar que o servidor está rodando
+// @Tags health
+// @Produce json
+// @Success 200 {object} models.HealthResponse
+// @Router /health [get]
 func HealthCheck(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{
