# internal/models/health.go
@@ -1,0 +1,5 @@
+package models
+
+type HealthResponse struct {
+	Message string `json:"message" example:"ok"`
+}
